Use fixed table cell width to maintain alignment between tables and fix add years buttons

--- a/Source/ProjectFirma.Web/Content/Bootstrap/firma/base.theme.less
+++ b/Source/ProjectFirma.Web/Content/Bootstrap/firma/base.theme.less
@@ -1439,6 +1439,19 @@ input:-webkit-autofill, textarea:-webkit-autofill, select:-webkit-autofill {
     font-style: italic;
 }
 
+// Edit funding source reported expenditures
+#EditFundingSourceExpendituresApp {
+    table {
+    table-layout: fixed;
+    }
+
+    td, th {
+    min-width: 128px;
+    width: 128px;
+    overflow: hidden;
+    }
+}
+
 //Accomplishments Dashboard
 #accomplishmentsDashboard {
 
